@@ -101,7 +101,7 @@ class SC_mod_help_about_index {
 		$TBE_TEMPLATE->docType = 'xhtml_trans';
 		$this->content.= $TBE_TEMPLATE->startPage('About');
 
-		$minorText = sprintf($LANG->getLL('minor'), 'TYPO3 Ver. '.TYPO3_version.', Copyright &#169; 1998-2005', 'Kasper Sk&#229;rh&#248;j');
+		$minorText = sprintf($LANG->getLL('minor'), 'TYPO3 Ver. '.TYPO3_version.', Copyright &#169; 1998-2006', 'Kasper Sk&#229;rh&#248;j');
 
 		$content='
 			<div id="typo3-mod-help-about-index-php-outer">
